--- a/src/main/resources/override.properties
+++ b/src/main/resources/override.properties
@@ -1,2 +1,4 @@
 webCrawler.linkDepth=8
 webCrawler.pagesLimit=10000
+webCrawler.seedUrl=https://en.wikipedia.org/wiki/Elon_Musk
+webCrawler.terms=Tesla;Musk;Gigafactory;Elon Mask
