--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <apache.httpclient5.version>5.0</apache.httpclient5.version>
         <slf4j.log4j12.version>1.7.30</slf4j.log4j12.version>
         <apache.httpclient.version>4.5.12</apache.httpclient.version>
+        <jsoup.version>1.13.1</jsoup.version>
     </properties>
 
     <dependencies>
@@ -54,6 +55,12 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.log4j12.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+        </dependency>
+
 
 
     </dependencies>
