add recursive analysis of web page

--- a/src/main/resources/override.properties
+++ b/src/main/resources/override.properties
@@ -1,4 +1,4 @@
-webCrawler.linkDepth=8
-webCrawler.pagesLimit=10000
-webCrawler.seedUrl=https://en.wikipedia.org/wiki/Elon_Musk
-webCrawler.terms=Tesla;Musk;Gigafactory;Elon Mask
+webCrawlerApplication.linkDepth=2
+webCrawlerApplication.pagesLimit=100
+webCrawlerApplication.seedUrl=https://en.wikipedia.org/wiki/Elon_Musk
+webCrawlerApplication.terms=Tesla;Musk;Gigafactory;Elon Mask
